set z-index fixed background image for the banner

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ header{
     background-color: blue;
     color: white;
     position: fixed;
+    z-index: 9999;
 }
 #container{
     width: 100%;
